# 628-Image-Check

./: pyproject.toml  requirements.txt
notebooks/: benchmark.ipynb  similarity_metrics.csv  similarity_metrics_block1_pool.csv  similarity_metrics_block2_conv1.csv  similarity_metrics_block2_conv2.csv  similarity_metrics_block3_conv2.csv  similarity_metrics_block3_conv3.csv  similarity_metrics_block5_conv1.csv  similarity_metrics_block5_conv3.csv
notebooks/metrics/: similarity_metrics_block1_conv2.csv  similarity_metrics_block3_conv1.csv  similarity_metrics_block3_pool.csv  similarity_metrics_block4_conv1.csv  similarity_metrics_block4_conv2.csv  similarity_metrics_block4_conv3.csv  similarity_metrics_block4_pool.csv  similarity_metrics_block5_conv2.csv  similarity_metrics_block5_pool.csv
notebooks/vgg16_visualizations/: similarity_metrics_block1_conv1.csv  similarity_metrics_block2_pool.csv
