[tool.poetry]
name = "628-image-check"
version = "0.1.0"
description = "628 Check N images for front input"
authors = ["rexionmars <opensource.leonardi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
opencv-python = "^4.10.0.84"
torch = "^2.4.1"
torchvision = "^0.19.1"
transformers = "^4.44.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
